--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "freeport": "1.0.x",
     "request": "2.9.x",
     "hash_file": "0.0.x"
+    "async": ""
   },
   "devDependencies": {
     "mocha": "1.x.x",
